--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.19.2",
